Updated Checking_model and HeatMap_visualisation notebooks

--- a/notebooks/Checking_model.ipynb
+++ b/notebooks/Checking_model.ipynb
@@ -1083,12 +1083,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bcf260dc",
+   "metadata": {},
+   "source": [
+    "## Checking spatial Attention:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2932356",
+   "metadata": {},
+   "source": [
+    "- We can apply this spatial attention mechanism to the activation maps before computing the **weighted sum** in Grad-CAM."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79b5e71f",
+   "id": "6386b780",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class SpatialAttention(nn.Module):\n",
+    "    def __init__(self, kernel_size=7):\n",
+    "        super(SpatialAttention, self).__init__()\n",
+    "        self.conv = nn.Conv2d(2, 1, kernel_size=kernel_size, padding=kernel_size//2, bias=False)\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        avg_out = torch.mean(x, dim=1, keepdim=True)  # Average pooling across channels\n",
+    "        max_out, _ = torch.max(x, dim=1, keepdim=True)  # Max pooling across channels\n",
+    "        attention = torch.cat([avg_out, max_out], dim=1)  # Concatenate both maps\n",
+    "        attention = self.conv(attention)  # Apply convolution\n",
+    "        return self.sigmoid(attention)  # Apply sigmoid to get attention scores\n"
+   ]
   }
  ],
  "metadata": {
