Changes in notebook

--- a/notebooks/Checking_model.ipynb
+++ b/notebooks/Checking_model.ipynb
@@ -1083,6 +1083,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0f2e9f77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'conv4'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sr = 'encoder.conv4'\n",
+    "\n",
+    "sr[8:]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bcf260dc",
    "metadata": {},
